# MateoLardiez-tp2ProgramacionConcurrente

./: Cargo.toml  README.md
orders/: orders1.json  orders2.json  orders3.json
src/: common.rs  defines.rs  lib.rs  structures.rs
src/common/: log.rs  protocol.rs  read_file.rs
src/defines/: ack.rs  prices_ice_creams.rs  status_order.rs  status_payment.rs
src/structures/: ack_manager.rs  gateway.rs  handle_connection.rs  ice_cream.rs  interface.rs  leader_order_processing.rs  order.rs  record.rs  robot.rs
